--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "practica de backend para el projecto de la cafeteria",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "babel-node index.js"
   },
   "keywords": [],
   "author": "Mauro Nicolas Garcia",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "express": "^4.18.1"
   }
 }
